# parking-lot

./: CMakeLists.txt  CompactParkingSpot.cpp  CompactParkingSpot.h  EntryTerminal.cpp  EntryTerminal.h  ExitTerminal.cpp  ExitTerminal.h  HandicappedParkingSpot.cpp  HandicappedParkingSpot.h  LargeParkingSpot.cpp  LargeParkingSpot.h  MotorcycleParkingSpot.cpp  MotorcycleParkingSpot.h  NearestSpotAssignment.cpp  NearestSpotAssignment.h  ParkingLot.cpp  ParkingLot.h  ParkingLotBuilder.cpp  ParkingLotBuilder.h  ParkingSpot.cpp  ParkingSpot.h  ParkingTicket.cpp  ParkingTicket.h  README.md  RandomSet.cpp  RandomSet.h  SetComparator.cpp  SetComparator.h  SpotAssignmentStrategy.h  Spots.h  Terminal.cpp  Terminal.h  parking.cpp
